--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
             </section>
             <section class="naszzespol">
                 <h2>Nasz zespół</h2>
-                <img class="person_photo" src="/images/person_1.jpeg" alt="John Doe" width="270" height="260">
-                <img class="person_photo" src="/images/person_2.jpeg" alt="John Doe" width="270" height="260">
-                <img class="person_photo" src="/images/person_3.jpeg" alt="John Doe" width="270" height="260">
-                <img class="person_photo" src="/images/person_4.jpeg" alt="John Doe" width="270" height="260">
+                <img class="person_photo" src="/images/person_1.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="/images/person_2.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="/images/person_3.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="/images/person_4.jpeg" alt="John Doe" width="270" height="220">
             </section>
         </main>
         <footer>
-            <a href="webstudio.com" target="_blank">WebStudio</a><br>
-            <address>m. Warszawa, Aleje Jerozolimskie 21</address><br>
-            <a href="mailto:info@example.com">info@example.com</a><br>
+            <a href="webstudio.com" target="_blank">WebStudio</a>
+            <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+            <a href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
         </footer>
     </body>
