--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             </section>
             <section class="czymsiezajmujemy">
                 <h2>Czym się zajmujemy</h2>
-                <img src="/images/image_1.jpeg" alt="osoba programuje" width="370" height="294">
-                <img src="/images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370" height="294">
-                <img src="/images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294">
+                <img src="images/image_1.jpeg" alt="osoba programuje" width="370" height="294">
+                <img src="images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370" height="294">
+                <img src="images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294">
             </section>
             <section class="naszzespol">
                 <h2>Nasz zespół</h2>
-                <img class="person_photo" src="/images/person_1.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="/images/person_2.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="/images/person_3.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="/images/person_4.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="images/person_1.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="images/person_2.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="images/person_3.jpeg" alt="John Doe" width="270" height="220">
+                <img class="person_photo" src="images/person_4.jpeg" alt="John Doe" width="270" height="220">
             </section>
         </main>
         <footer>
