--- a/index.html
+++ b/index.html
@@ -1,61 +1,103 @@
 <!DOCTYPE html>
 <html lang="pl">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Zadanie domowe 1</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="webstudio.com" target="_blank">WebStudio</a>
-                <a href="webstudio.com" target="_blank">Agencja</a>
-                <a href="webstudio.com" target="_blank">Portfolio</a>
-                <a href="webstudio.com" target="_blank">Kontakt</a>
-            </nav>
-            <a href="mailto:info@devstusio.com">info@devstusio.com</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-        </header>
-        <main>
-            <section class="belka">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zadanie domowe 1</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="webstudio.com" target="_blank">WebStudio</a>
+            <a href="webstudio.com" target="_blank">Agencja</a>
+            <a href="webstudio.com" target="_blank">Portfolio</a>
+            <a href="webstudio.com" target="_blank">Kontakt</a>
+        </nav>
+        <a href="mailto:info@devstusio.com">info@devstusio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+    </header>
+    <main>
+        <section class="belka">
             <h1>EFEKTYWNE ROZIĄZANIA<br>
                 DLA WASZEGO BIZNESU
             </h1>
             <button class="button">Zamów usługę</button>
-            </section>
-            <section class="opis">
+        </section>
+        <section class="opis">
             <ul>
-                <li><h3>LOREM IPSUM</h3><p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
-                <li><h3>LOREM IPSUM</h3><p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
-                <li><h3>LOREM IPSUM</h3><p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
-                <li><h3>LOREM IPSUM</h3><p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p></li>
+                <li>
+                    <h3>LOREM IPSUM</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+                        Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h3>LOREM IPSUM</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+                        Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h3>LOREM IPSUM</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+                        Interdum et malesuada</p>
+                </li>
+                <li>
+                    <h3>LOREM IPSUM</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui.
+                        Interdum et malesuada</p>
+                </li>
             </ul>
-            </section>
-            <section class="czymsiezajmujemy">
-                <h2>Czym się zajmujemy</h2>
-                <img src="images/image_1.jpeg" alt="osoba programuje" width="370" height="294">
-                <img src="images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370" height="294">
-                <img src="images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294">
-            </section>
-            <section class="naszzespol">
-                <h2>Nasz zespół</h2>
-                <img class="person_photo" src="images/person_1.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="images/person_2.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="images/person_3.jpeg" alt="John Doe" width="270" height="220">
-                <img class="person_photo" src="images/person_4.jpeg" alt="John Doe" width="270" height="220">
-            </section>
-        </main>
-        <footer>
-            <a href="webstudio.com" target="_blank">WebStudio</a>
-            <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-            <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
-        </footer>
-    </body>
+        </section>
+        <section class="czymsiezajmujemy">
+            <h2>Czym się zajmujemy</h2>
+            <img src="images/image_1.jpeg" alt="osoba programuje" width="370" height="294">
+            <img src="images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370" height="294">
+            <img src="images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294">
+        </section>
+        <section class="naszzespol">
+            <h2>Nasz zespół</h2>
+            <img class="person_photo" src="images/person_1.jpeg" alt="John Doe" width="270" height="220">
+            <img class="person_photo" src="images/person_2.jpeg" alt="John Doe" width="270" height="220">
+            <img class="person_photo" src="images/person_3.jpeg" alt="John Doe" width="270" height="220">
+            <img class="person_photo" src="images/person_4.jpeg" alt="John Doe" width="270" height="220">
+        </section>
+        <section class="opiszespol">
+            <ul>
+                <li>
+                    <h4>John Doe</h4>
+                    <p>
+                        Product Designer</p>
+                </li>
+                <li>
+                    <h4>John Doe</h4>
+                    <p>
+                        Frontend Developer</p>
+                </li>
+                <li>
+                    <h4>John Doe</h4>
+                    <p>
+                        Marketing</p>
+                </li>
+                <li>
+                    <h4>John Doe</h4>
+                    <p>
+                        UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="webstudio.com" target="_blank">WebStudio</a>
+        <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+48111111111">+48111111111</a>
+    </footer>
+</body>
 
-    </html>
+</html>
