--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
     <header>
         <nav>
-            <a href="webstudio.com" target="_blank">WebStudio</a>
-            <a href="webstudio.com" target="_blank">Agencja</a>
-            <a href="webstudio.com" target="_blank">Portfolio</a>
-            <a href="webstudio.com" target="_blank">Kontakt</a>
+            <ul>
+                <li><a href="#" target="_blank">WebStudio</a></li>
+                <li><a href="#" target="_blank">Agencja</a></li>
+                <li><a href="#" target="_blank">Portfolio</a></li>
+                <li><a href="#" target="_blank">Kontakt</a></li>
+            </ul>
         </nav>
-        <a href="mailto:info@devstusio.com">info@devstusio.com</a>
-        <a href="tel:+48111111111">+48 111 111 111</a>
+        <ul>
+            <li><a href="mailto:info@devstusio.com">info@devstusio.com</a></li>
+            <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        </ul>
     </header>
     <main>
         <section class="belka">
@@ -56,47 +60,44 @@
         </section>
         <section class="czymsiezajmujemy">
             <h2>Czym się zajmujemy</h2>
-            <img src="images/image_1.jpeg" alt="osoba programuje" width="370" height="294">
-            <img src="images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370" height="294">
-            <img src="images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294">
+            <ul>
+                <li><img src="images/image_1.jpeg" alt="osoba programuje" width="370" height="294"></li>
+                <li><img src="images/image_2.jpeg" alt="osoba pracuje nad aplikacją na telefon" width="370"
+                        height="294"></li>
+                <li><img src="images/image_3.jpeg" alt="osoba wybiera kolor na tablecie" width="370" height="294"></li>
+            </ul>
         </section>
         <section class="naszzespol">
             <h2>Nasz zespół</h2>
-            <img class="person_photo" src="images/person_1.jpeg" alt="John Doe" width="270" height="220">
-            <img class="person_photo" src="images/person_2.jpeg" alt="John Doe" width="270" height="220">
-            <img class="person_photo" src="images/person_3.jpeg" alt="John Doe" width="270" height="220">
-            <img class="person_photo" src="images/person_4.jpeg" alt="John Doe" width="270" height="220">
-        </section>
-        <section class="opiszespol">
             <ul>
-                <li>
-                    <h4>John Doe</h4>
-                    <p>
-                        Product Designer</p>
+                <li><img class="person_photo" src="images/person_1.jpeg" alt="John Doe" width="270" height="220">
+                    <h3>John Doe</h3>
+                    <p>Product Designer</p>
                 </li>
-                <li>
-                    <h4>John Doe</h4>
-                    <p>
-                        Frontend Developer</p>
+                <li><img class="person_photo" src="images/person_2.jpeg" alt="John Doe" width="270" height="220">
+                    <h3>John Doe</h3>
+                    <p>Frontend Developer</p>
                 </li>
-                <li>
-                    <h4>John Doe</h4>
-                    <p>
-                        Marketing</p>
+                <li><img class="person_photo" src="images/person_3.jpeg" alt="John Doe" width="270" height="220">
+                    <h3>John Doe</h3>
+                    <p>Marketing</p>
                 </li>
-                <li>
-                    <h4>John Doe</h4>
-                    <p>
-                        UI Designer</p>
+                <li><img class="person_photo" src="images/person_4.jpeg" alt="John Doe" width="270" height="220">
+                    <h3>John Doe</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="webstudio.com" target="_blank">WebStudio</a>
-        <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+48111111111">+48111111111</a>
+        <ul>
+            <li><a href="webstudio.com" target="_blank">WebStudio</a></li>
+            <li>
+                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+            </li>
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+48111111111">+48111111111</a></li>
+        </ul>
     </footer>
 </body>
 
