--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav>
+            <a href="#" target="_blank">WebStudio</a>
             <ul>
-                <li><a href="#" target="_blank">WebStudio</a></li>
                 <li><a href="#" target="_blank">Agencja</a></li>
                 <li><a href="#" target="_blank">Portfolio</a></li>
                 <li><a href="#" target="_blank">Kontakt</a></li>
@@ -91,15 +91,14 @@
         </section>
     </main>
     <footer>
+        <a href="webstudio.com" target="_blank">WebStudio</a>
+        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+        <address>
         <ul>
-            <li><a href="webstudio.com" target="_blank">WebStudio</a></li>
-            <li>
-                <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-            </li>
             <li><a href="mailto:info@example.com">info@example.com</a></li>
             <li><a href="tel:+48111111111">+48111111111</a></li>
         </ul>
+        </address>
     </footer>
 </body>
-
 </html>
